Add nearest neighbor regression model

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -115,6 +115,7 @@
     "import statsmodels.api as sm\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
     "\n",
     "# Load the datasets\n",
     "kpi_data_path = 'data/kpi_data.csv'\n",
@@ -134,15 +135,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:01.976308800Z",
-     "start_time": "2024-01-06T16:54:54.989751400Z"
+     "end_time": "2024-01-07T00:38:49.209793900Z",
+     "start_time": "2024-01-07T00:38:38.020474400Z"
     }
    },
    "id": "42faebb1f7693543"
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "outputs": [
     {
      "data": {
@@ -256,15 +257,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:11.207023600Z",
-     "start_time": "2024-01-06T16:55:03.368308100Z"
+     "end_time": "2024-01-07T00:39:00.653028100Z",
+     "start_time": "2024-01-07T00:38:50.676777400Z"
     }
    },
    "id": "8fb5aa0d61a835d0"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -344,15 +345,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:21.262264100Z",
-     "start_time": "2024-01-06T16:55:13.095432700Z"
+     "end_time": "2024-01-07T00:39:12.883752500Z",
+     "start_time": "2024-01-07T00:39:00.651033800Z"
     }
    },
    "id": "a8cc375d040af450"
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -400,15 +401,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:23.054266400Z",
-     "start_time": "2024-01-06T16:55:21.259263100Z"
+     "end_time": "2024-01-07T00:39:15.383695Z",
+     "start_time": "2024-01-07T00:39:13.523524300Z"
     }
    },
    "id": "83845f535d1bbf20"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
@@ -480,8 +481,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:27.880710900Z",
-     "start_time": "2024-01-06T16:55:23.061265800Z"
+     "end_time": "2024-01-07T00:39:21.709890300Z",
+     "start_time": "2024-01-07T00:39:15.377033500Z"
     }
    },
    "id": "4dc40392f900fcfd"
@@ -522,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -718,8 +719,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:28.131716300Z",
-     "start_time": "2024-01-06T16:55:27.871715Z"
+     "end_time": "2024-01-07T00:39:22.024473700Z",
+     "start_time": "2024-01-07T00:39:21.712882100Z"
     }
    },
    "id": "50f6d06c59423e74"
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -814,8 +815,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:32.855680100Z",
-     "start_time": "2024-01-06T16:55:28.034704500Z"
+     "end_time": "2024-01-07T00:39:28.254109100Z",
+     "start_time": "2024-01-07T00:39:21.896262600Z"
     }
    },
    "id": "ec1197bafa182afb"
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
@@ -925,15 +926,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:36.415176200Z",
-     "start_time": "2024-01-06T16:55:32.880690700Z"
+     "end_time": "2024-01-07T00:39:33.109554600Z",
+     "start_time": "2024-01-07T00:39:28.259271200Z"
     }
    },
    "id": "2289adef04f25c4b"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
@@ -990,8 +991,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:37.228182Z",
-     "start_time": "2024-01-06T16:55:36.417170500Z"
+     "end_time": "2024-01-07T00:39:34.263795200Z",
+     "start_time": "2024-01-07T00:39:33.089918900Z"
     }
    },
    "id": "3d87e24a57660d56"
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
@@ -1044,8 +1045,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:40.733883100Z",
-     "start_time": "2024-01-06T16:55:37.225183200Z"
+     "end_time": "2024-01-07T00:39:38.273198Z",
+     "start_time": "2024-01-07T00:39:34.274689400Z"
     }
    },
    "id": "9d47b0f29f8e1b4a"
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "normal_kpis = ['N00351', 'N00925', 'N00352', 'N00348', 'N00362', 'N00923', 'N00363', 'N00359']\n",
@@ -1103,15 +1104,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.068857500Z",
-     "start_time": "2024-01-06T16:55:40.726868300Z"
+     "end_time": "2024-01-07T00:39:38.797130300Z",
+     "start_time": "2024-01-07T00:39:38.280760700Z"
     }
    },
    "id": "fe4d3d0965ff8b19"
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -1151,8 +1152,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.070859900Z",
-     "start_time": "2024-01-06T16:55:40.807871Z"
+     "end_time": "2024-01-07T00:39:38.799126900Z",
+     "start_time": "2024-01-07T00:39:38.406751700Z"
     }
    },
    "id": "bacfb3685e43f5c1"
@@ -1253,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "# Filter the DataFrame for Health and Income KPIs by age\n",
@@ -1295,15 +1296,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.119862400Z",
-     "start_time": "2024-01-06T16:55:40.862886Z"
+     "end_time": "2024-01-07T00:39:38.889810400Z",
+     "start_time": "2024-01-07T00:39:38.422057700Z"
     }
    },
    "id": "cc04aec24eb0aa83"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -1351,15 +1352,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.120862100Z",
-     "start_time": "2024-01-06T16:55:40.885858400Z"
+     "end_time": "2024-01-07T00:39:38.892806300Z",
+     "start_time": "2024-01-07T00:39:38.524338800Z"
     }
    },
    "id": "ba429f650e9ee32b"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -1372,8 +1373,8 @@
       "Dep. Variable:                 health   R-squared:                       0.319\n",
       "Model:                            OLS   Adj. R-squared:                  0.248\n",
       "Method:                 Least Squares   F-statistic:                     4.454\n",
-      "Date:                Sat, 06 Jan 2024   Prob (F-statistic):             0.0259\n",
-      "Time:                        17:55:40   Log-Likelihood:                -83.370\n",
+      "Date:                Sun, 07 Jan 2024   Prob (F-statistic):             0.0259\n",
+      "Time:                        01:39:38   Log-Likelihood:                -83.370\n",
       "No. Observations:                  22   AIC:                             172.7\n",
       "Df Residuals:                      19   BIC:                             176.0\n",
       "Df Model:                           2                                         \n",
@@ -1400,8 +1401,8 @@
       "Dep. Variable:                 health   R-squared:                       0.509\n",
       "Model:                            OLS   Adj. R-squared:                  0.457\n",
       "Method:                 Least Squares   F-statistic:                     9.854\n",
-      "Date:                Sat, 06 Jan 2024   Prob (F-statistic):            0.00116\n",
-      "Time:                        17:55:40   Log-Likelihood:                -80.260\n",
+      "Date:                Sun, 07 Jan 2024   Prob (F-statistic):            0.00116\n",
+      "Time:                        01:39:38   Log-Likelihood:                -80.260\n",
       "No. Observations:                  22   AIC:                             166.5\n",
       "Df Residuals:                      19   BIC:                             169.8\n",
       "Df Model:                           2                                         \n",
@@ -1436,8 +1437,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.121863600Z",
-     "start_time": "2024-01-06T16:55:40.901860200Z"
+     "end_time": "2024-01-07T00:39:38.922302400Z",
+     "start_time": "2024-01-07T00:39:38.538918100Z"
     }
    },
    "id": "78cfc339df905a85"
@@ -1498,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "def run_regression_model(df, dependent_kpi, independent_kpis):\n",
@@ -1540,8 +1541,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.122864600Z",
-     "start_time": "2024-01-06T16:55:40.936862300Z"
+     "end_time": "2024-01-07T00:39:38.924301600Z",
+     "start_time": "2024-01-07T00:39:38.590430700Z"
     }
    },
    "id": "934cb4431d77b334"
@@ -1559,8 +1560,8 @@
       "Dep. Variable:                 N00351   R-squared:                       0.919\n",
       "Model:                            OLS   Adj. R-squared:                  0.871\n",
       "Method:                 Least Squares   F-statistic:                     19.02\n",
-      "Date:                Sat, 06 Jan 2024   Prob (F-statistic):           6.21e-05\n",
-      "Time:                        17:55:40   Log-Likelihood:                -44.514\n",
+      "Date:                Sun, 07 Jan 2024   Prob (F-statistic):           6.21e-05\n",
+      "Time:                        01:39:38   Log-Likelihood:                -44.514\n",
       "No. Observations:                  17   AIC:                             103.0\n",
       "Df Residuals:                      10   BIC:                             108.9\n",
       "Df Model:                           6                                         \n",
@@ -1596,8 +1597,8 @@
       "Dep. Variable:                 N00925   R-squared:                       0.660\n",
       "Model:                            OLS   Adj. R-squared:                  0.457\n",
       "Method:                 Least Squares   F-statistic:                     3.241\n",
-      "Date:                Sat, 06 Jan 2024   Prob (F-statistic):             0.0490\n",
-      "Time:                        17:55:40   Log-Likelihood:                -5.2079\n",
+      "Date:                Sun, 07 Jan 2024   Prob (F-statistic):             0.0490\n",
+      "Time:                        01:39:38   Log-Likelihood:                -5.2079\n",
       "No. Observations:                  17   AIC:                             24.42\n",
       "Df Residuals:                      10   BIC:                             30.25\n",
       "Df Model:                           6                                         \n",
@@ -1633,8 +1634,8 @@
       "Dep. Variable:                 N00362   R-squared:                       0.887\n",
       "Model:                            OLS   Adj. R-squared:                  0.820\n",
       "Method:                 Least Squares   F-statistic:                     13.14\n",
-      "Date:                Sat, 06 Jan 2024   Prob (F-statistic):           0.000311\n",
-      "Time:                        17:55:41   Log-Likelihood:                -48.938\n",
+      "Date:                Sun, 07 Jan 2024   Prob (F-statistic):           0.000311\n",
+      "Time:                        01:39:38   Log-Likelihood:                -48.938\n",
       "No. Observations:                  17   AIC:                             111.9\n",
       "Df Residuals:                      10   BIC:                             117.7\n",
       "Df Model:                           6                                         \n",
@@ -1670,8 +1671,8 @@
       "Dep. Variable:                 N00923   R-squared:                       0.770\n",
       "Model:                            OLS   Adj. R-squared:                  0.632\n",
       "Method:                 Least Squares   F-statistic:                     5.576\n",
-      "Date:                Sat, 06 Jan 2024   Prob (F-statistic):            0.00886\n",
-      "Time:                        17:55:41   Log-Likelihood:                -4.4326\n",
+      "Date:                Sun, 07 Jan 2024   Prob (F-statistic):            0.00886\n",
+      "Time:                        01:39:38   Log-Likelihood:                -4.4326\n",
       "No. Observations:                  17   AIC:                             22.87\n",
       "Df Residuals:                      10   BIC:                             28.70\n",
       "Df Model:                           6                                         \n",
@@ -1740,23 +1741,90 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.142856900Z",
-     "start_time": "2024-01-06T16:55:40.955860700Z"
+     "end_time": "2024-01-07T00:39:38.976043600Z",
+     "start_time": "2024-01-07T00:39:38.617539800Z"
     }
    },
    "id": "ce71ceddb5a5d21f",
-   "execution_count": 33
+   "execution_count": 36
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Random Forest Model\n"
+    "# Nearest Neighbors Regression Model\n",
+    "def run_knn_model(df, dependent_kpi, independent_kpis, n_neighbors=5):\n",
+    "    # Pivot the data to get KPIs as columns\n",
+    "    df_pivot = df.pivot_table(index='municipality', columns='kpi', values='value')\n",
+    "\n",
+    "    # Fill NaN values with the mean of each column\n",
+    "    df_pivot_filled = df_pivot.fillna(df_pivot.mean())\n",
+    "\n",
+    "    # Define the independent variables\n",
+    "    X = df_pivot_filled[independent_kpis]\n",
+    "\n",
+    "    # Define the dependent variable\n",
+    "    y = df_pivot_filled[dependent_kpi]\n",
+    "\n",
+    "    # Split the data into training and testing sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "    # Create and train the K-Nearest Neighbors model\n",
+    "    knn_model = KNeighborsRegressor(n_neighbors=n_neighbors)\n",
+    "    knn_model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Get predictions\n",
+    "    y_pred = knn_model.predict(X_test)\n",
+    "\n",
+    "    # Calculate Mean Squared Error and R-squared\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "    # Output the model's MSE and R-squared\n",
+    "    print(f\"K-Nearest Neighbors Model Summary for Dependent KPI: {dependent_kpi}\")\n",
+    "    print(f\"Mean Squared Error: {mse}\")\n",
+    "    print(f\"R-squared: {r2}\\n\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-07T00:40:59.831310900Z",
+     "start_time": "2024-01-07T00:40:59.533564600Z"
+    }
    },
-   "id": "fbd024d3fde90ffa"
+   "id": "fbd024d3fde90ffa",
+   "execution_count": 41
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K-Nearest Neighbors Model Summary for Dependent KPI: N00351\n",
+      "Mean Squared Error: 226.1529985369741\n",
+      "R-squared: 0.17177812356203925\n",
+      "\n",
+      "K-Nearest Neighbors Model Summary for Dependent KPI: N00925\n",
+      "Mean Squared Error: 0.2382384000000029\n",
+      "R-squared: -0.6695520547177083\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_knn_model(regional_df, 'N00351', independent_women_kpis)  # For women's health index\n",
+    "run_knn_model(regional_df, 'N00925', independent_women_kpis)  # For women's life expectancy"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-07T00:41:00.437961600Z",
+     "start_time": "2024-01-07T00:41:00.311974900Z"
+    }
+   },
+   "id": "a8e001953934a0d0",
+   "execution_count": 42
   },
   {
    "cell_type": "markdown",
@@ -1782,14 +1850,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.144854600Z",
-     "start_time": "2024-01-06T16:55:41.073866400Z"
+     "end_time": "2024-01-07T00:39:39.137359400Z",
+     "start_time": "2024-01-07T00:39:38.975038500Z"
     }
    },
    "id": "3a33c544f55a9b6b"
@@ -1807,14 +1875,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-06T16:55:41.249861600Z",
-     "start_time": "2024-01-06T16:55:41.089861800Z"
+     "end_time": "2024-01-07T00:39:39.157141200Z",
+     "start_time": "2024-01-07T00:39:38.990105200Z"
     }
    },
    "id": "a7a7646d95a71126"
