Update probability distributions text

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -724,8 +724,7 @@
       "50%      64.319735\n",
       "75%      72.126559\n",
       "max      92.239015\n",
-      "Name: value, dtype: float64\n",
-      "\n"
+      "Name: value, dtype: float64\n"
      ]
     }
    ],
@@ -1207,6 +1206,17 @@
   {
    "cell_type": "markdown",
    "source": [
+    "### Exploratory Analysis Conclusion\n",
+    "conclusion"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "df110ccdc4ddd787"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "### Probability Distribution"
    ],
    "metadata": {
@@ -1250,18 +1260,18 @@
    "cell_type": "markdown",
    "source": [
     "### Probability Distribution: Observations\n",
-    "Based on the histograms above we will try to describe the distributions of the following variables:\n",
+    "The histograms provide a visual representation of the distribution of various health and socioeconomic variables. Below are the observations for each:\n",
     "\n",
-    "1. Hälsa - Regionindex Kvinnor/Män N00351/N00362 (Health Index Women/Men): \n",
-    "The histograms show a relatively symmetric distribution but with some slight deviations from the bell shape. Given this shape we believe that a normal distribution could be an approximate fit. To capture the slight skewness a more nuanced distribution is needed.\n",
-    "2. Inkomst och förmögenheter Kvinnor/Män (Income and Wealth Women/Men): \n",
-    "These histograms show a right-skewed distribution. The distribution is not symmetric and the right tail is longer than the left tail. Given this shape we believe that a log-normal distribution could be an approximate fit.\n",
-    "3. Utbildning och kompetens Kvinnor/Män (Education and Competence Women/Men):\n",
-    "These histograms show a normal distribution as they show a bell-shaped curve which is symmetric around the mean. Given this shape we believe that a normal distribution could be an approximate fit.\n",
-    "4. Arbete och löner Kvinnor (Work and Salary Women): \n",
-    "The histogram shows a log-normal distribution as when we apply a log transformation the distribution becomes more symmetric. Given this shape we believe that a log-normal distribution could be an approximate fit.\n",
-    "5. Arbete och löner Män (Work and Salary Men):\n",
-    "The histogram after being log-transformed shows a slight right-skewed distribution. Therefore, we can conclude that this histogram does not perfectly follow a log-normal distribution however is a reasonably close fit."
+    "1. **Health Index for Women and Men (Hälsa Kvinnor/Män):**\n",
+    "The distributions for both women and men exhibit a nearly symmetrical shape with minor deviations suggesting that normal distribution might be a reasonable approximation.\n",
+    "2. **Income and Wealth for Women and Men (Inkomst och förmögenheter Kvinnor/Män):** \n",
+    "The histograms reveal a pronounced right skew indicating that a considerable number of observations cluster on the lower end of the scale. This pattern is common for a log-normal distribution where higher values are less frequent but significantly impact the mean.\n",
+    "3. **Education and Competence for Women and Men (Utbildning och kompetens Kvinnor/Män):** \n",
+    "Both histograms display a bell-shaped curve centered around the mean aligning with the characteristics of a normal distribution. This suggests that educational attainment is fairly consistent across the data.\n",
+    "4. **Work and Salary for Women (Arbete och löner Kvinnor):**\n",
+    "Upon log transformation the distribution of women's work and salary conditions approaches symmetry hinting at an underlying log-normal distribution. This reflects that while there is variability in work and salary conditions it conforms to a predictable pattern when adjusted for scale.\n",
+    "5. **Work and Salary for Men (Arbete och löner Män):**\n",
+    "Even after a log transformation the histogram for men's work and salary conditions exhibits a slight right skew. While not perfectly log-normal the distribution is close suggesting that salaries for men are generally higher with some outliers influencing the tail."
    ],
    "metadata": {
     "collapsed": false
