Predict analysis observations

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -724,8 +724,7 @@
       "50%      64.319735\n",
       "75%      72.126559\n",
       "max      92.239015\n",
-      "Name: value, dtype: float64\n",
-      "\n"
+      "Name: value, dtype: float64\n"
      ]
     }
    ],
@@ -2148,37 +2147,20 @@
    "cell_type": "markdown",
    "source": [
     "### Predictive Analysis: Observations\n",
-    "#### Linear Regression Model Results:\n",
-    "1. Health Index for Women (N00351):\n",
-    "    - Mean Squared Error: 30.68\n",
-    "    - R-squared: 0.887\n",
-    "2. Life Expectancy for Women (N00925):\n",
-    "    - Mean Squared Error: 0.075\n",
-    "    - R-squared: 0.474\n",
-    "3. Health Index for Men (N00362):\n",
-    "    - Mean Squared Error: 57.87\n",
-    "    - R-squared: 0.724\n",
-    "4. Life Expectancy for Men (N00923):\n",
-    "    - Mean Squared Error: 0.354\n",
-    "    - R-squared: 0.770\n",
+    "In our predictive models, our examination has distinctly shown the superior performance of the linear regression model when compared to the K-Nearest Neighbors (KNN) approach.\n",
     "\n",
-    "#### K-Nearest Neighbors Model Results:\n",
-    "1. Health Index for Women (N00351):\n",
-    "    - Mean Squared Error: 226.15\n",
-    "    - R-squared: 0.172\n",
-    "2. Life Expectancy for Women (N00925):\n",
-    "    - Mean Squared Error: 0.238\n",
-    "    - R-squared: -0.670\n",
-    "3. Health Index for Men (N00362):\n",
-    "    - Mean Squared Error: 155.15\n",
-    "    - R-squared: 0.260\n",
-    "4. Life Expectancy for Men (N00923):\n",
-    "    - Mean Squared Error: 0.082\n",
-    "    - R-squared: 0.267\n",
+    "#### Comparative Results:\n",
+    "For the **Health Index for Women and Men**, the linear regression model delivered an R-squared of 0.887 and 0.724 respectively. The linear regression model significantly outperformed the KNN model's R-squared of 0.172 and 0.260. This metric reflects the model's accuracy in explaining the variability of the health index.   \n",
     "\n",
-    "#### Hypothesis 1 - Predictive model comparison:\n",
-    "* **Model Performance (MSE and R-squared):** The linear regression model consistently shows lower MSE values and higher R-squared values across all dependent KPIs showing a better predictive accuracy and model fit compared to the nearest neighbor model.\n",
-    "* **Hypothesis Testing Results:** The hypothesis testing results (T-statistic and P-value) demonstrate a significant difference in model performance in favor of the linear regression model for three of the four KPIs. Only in the case of Life Expectancy for Men (N00923) was there no significant difference found."
+    "Regarding the Life Expectancy for Women and Men, the linear regression model again demonstrated higher efficiency with R-squared values of 0.474 and 0.770 respectively. In comparison, the KNN model for women produced a negative R-squared indicating a poor fit.\n",
+    "\n",
+    "#### Statistical Significance:\n",
+    "The hypothesis tests conducted to compare model performances revealed statistically significant differences favoring the linear regression model for the Health Index in both genders and for women's Life Expectancy as evidenced by the low p-values obtained. Only for men's Life Expectancy was the performance difference not statistically significant.\n",
+    "\n",
+    "#### Implications of Model Selection:\n",
+    "These results underscore the adequacy of linear regression as a predictive tool in our study likely due to its ability to capture linear relationships in the data effectively. The KNN model, while useful in certain contexts did not align as well with the underlying patterns of our specific dataset.\n",
+    "\n",
+    "This preference for linear regression is rooted not just in its predictive power but also in its interpretability which is crucial for understanding the relationship between variables in a real-world context."
    ],
    "metadata": {
     "collapsed": false
