--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -760,8 +760,7 @@
       "50%      64.319735\n",
       "75%      72.126559\n",
       "max      92.239015\n",
-      "Name: value, dtype: float64\n",
-      "\n"
+      "Name: value, dtype: float64\n"
      ]
     }
    ],
@@ -2225,13 +2224,15 @@
     "collapsed": false
    },
    "source": [
-    "This study embarked on a journey to explore how socioeconomic factors specifically income and education affect health outcomes in Sweden. Our main goal was to carefully examine the different ways these factors influence health disparities paying particular attention to gender differences.\n",
+    "This study embarked on a comprehensive journey to explore the impact of socioeconomic factors, notably income and education, on health outcomes in Sweden. We placed a specific focus on examining the nuances of how these factors contribute to health disparities, with a keen emphasis on gender differences.\n",
     "\n",
-    "Our univariate analysis showed a clear link between income and health outcomes while education's influence seemed more subtle and indirect. A deeper look through multivariate analysis which considered factors like obesity, self-assessed health, and smoking revealed that income's effect on the Health Index was significant but changed when these lifestyle factors were taken into account.\n",
+    "Our univariate analysis revealed a statistically significant association between income and health outcomes. Conversely, the link between education and health, though present, was weaker and did not reach statistical significance. Additionally, our univariate analyses identified associations between certain lifestyle factors and health. Consequently, these variables, identified as potential confounders, were incorporated as covariates in our multivariate models.\n",
     "\n",
-    "In our study of Life Expectancy, we found that income's impact lessened when other health determinants were included. Notably, obesity stood out as a key independent facto, greatly affecting life expectancy.\n",
+    "In these multivariate models, income consistently emerged as a significant predictor of health status, as indicated by the composite health index measures N00351 and N00362, even after adjusting for lifestyle factors such as obesity, self-assessed health, and smoking.\n",
     "\n",
-    "This research emphasizes the important role of socioeconomic factors in creating health disparities. IIncome in particular was consistently linked to health outcomes. The impact of education was less direct, suggesting we should further explore how it indirectly affects health through its interaction with other factors.\n",
+    "Regarding the predictors of Life Expectancy, our analysis indicated that the association between income and life expectancy was not statistically significant. However, in the multivariate models, which included lifestyle factors as covariates, obesity was identified as a key independent variable impacting life expectancy.\n",
+    "\n",
+    "The findings underscore the pivotal role of socioeconomic factors in the area of health disparities. Income in particular demonstrated a consistent correlation with health outcomes. The relatively weaker correlation of education suggests the need for further exploration into its indirect effects and interplay with other determinants in shaping health.\n",
     "\n",
     "### Next Steps\n",
     "The relationship between income, education, and health outcomes is complex and calls for more research. Future studies could focus on:\n",
